--- a/GMSClient/Shared/MainLayout.razor
+++ b/GMSClient/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager navigationManager
+
 
 <div class="sidebar">
     <NavMenu />
@@ -13,3 +15,5 @@
         @Body
     </div>
 </div>
+
+
