--- a/GMSClient/App.razor
+++ b/GMSClient/App.razor
@@ -4,8 +4,8 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+        <LayoutView Layout="@typeof(EmptyLayout)">
+            <center><p>آدرس مورد نظر یافت نشد</p></center> 
         </LayoutView>
     </NotFound>
 </Router>
