--- a/GMSClient/Pages/Customers.razor
+++ b/GMSClient/Pages/Customers.razor
@@ -1,13 +1,14 @@
 ﻿@page "/customers"
+@layout MainLayout
 
 @using GMSClient.Data
-@inject BackendEngine ForecastService
-@inject ILocalStorageService storageService
+@inject NavigationManager navigationManager
+@inject StateContainer StateContainer
 
 <h1>مشتریان</h1>
 
 
-@if (forecasts == null)
+@if (customers == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -16,20 +17,70 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
+                <th>نام</th>
+                <th>نام خانوادگی</th>
+                <th>تاریخ عضویت</th>
+                <th>جنسیت</th>
+                <th>موبایل</th>
+                <th>تلفن</th>
+                <th>کد پستی</th>
+                <th>ایمیل</th>
+                <th>تلگرام</th>
+                <th>اینستاگرام</th>
+                <th>آدرس</th>
+                <th>شغل</th>
+                <th>نحوه آشنایی</th>
+                <th>معرف</th>
+                <th>ویزیتور</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var item in customers)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>
+                        @item.FirstName
+                    </td>
+                    <td>
+                        @item.LastName
+                    </td>
+                    <td>@item.JoinDateFa</td>
+                    <td>
+                        @item.GenderFa
+                    </td>
+                    <td>
+                        @item.Mobile
+                    </td>
+                    <td>
+                        @item.Tel
+                    </td>
+                    <td>
+                        @item.PostalCode
+                    </td>
+                    <td>
+                        @item.Email
+                    </td>
+                    <td>
+                        @item.Telegram
+                    </td>
+                    <td>
+                        @item.Instagram
+                    </td>
+                    <td>
+                        @item.Address
+                    </td>
+                    <td>
+                        @item.Job_Title
+                    </td>
+                    <td>
+                        @item.MembershipJoinTypeTitle
+                    </td>
+                    <td>
+                        @item.ReferralFullName
+                    </td>
+                    <td>
+                        @item.VisitorFullName
+                    </td>
                 </tr>
             }
         </tbody>
@@ -37,11 +88,21 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    private Customer[] customers;
 
     protected override async Task OnInitializedAsync()
-    {
-       
-        forecasts = null;
+    {       
+        if(string.IsNullOrWhiteSpace(StateContainer.Token))
+        {
+            navigationManager.NavigateTo("/");
+        }
+
+        var data = BackendEngine.Call("ClientGetAll", "", StateContainer.Token);
+
+        customers = JsonConvert.DeserializeObject<Customer[]>(data);
+
+
     }
+
+
 }
