--- a/GMSClient/Shared/MainLayout.razor
+++ b/GMSClient/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @inject NavigationManager navigationManager
-
+@inject StateContainer StateContainer
 
 <div class="sidebar">
     <NavMenu />
@@ -8,12 +8,11 @@
 
 <div class="main">
     <div class="top-row px-4">
-        @*<a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>*@
+        <a href="Logout">خروج</a>
     </div>
 
     <div class="content px-4">
         @Body
     </div>
 </div>
-
 
