--- a/GMSClient/Pages/Customers.razor
+++ b/GMSClient/Pages/Customers.razor
@@ -14,6 +14,7 @@
 }
 else
 {
+    <button class="btn-primary" @onclick="(()=>ShowCustomerAdd())">ایجاد مشتری</button>
     <table class="table">
         <thead>
             <tr>
@@ -70,7 +71,7 @@ else
                         @item.Address
                     </td>
                     <td>
-                        @item.Job_Title
+                        @item.JobTitle
                     </td>
                     <td>
                         @item.MembershipJoinTypeTitle
@@ -106,6 +107,11 @@ else
             BackendMesssage = msg;
         else
             customers = JsonConvert.DeserializeObject<Customer[]>(data);
+    }
+
+    private async void ShowCustomerAdd()
+    {
+        navigationManager.NavigateTo("/customeradd");
     }
 
 
