--- a/GMSClient/Pages/Login.razor
+++ b/GMSClient/Pages/Login.razor
@@ -112,6 +112,11 @@
     protected async override Task OnInitializedAsync()
     {
         user = new User();
+
+        if (!string.IsNullOrWhiteSpace(stateContainer.Token))
+        {
+            navigationManager.NavigateTo("/home");
+        }
     }
 
     private async Task<bool> ValidateUser()
