--- a/GMSClient/Pages/ProductAdd.razor
+++ b/GMSClient/Pages/ProductAdd.razor
@@ -21,7 +21,7 @@
         </div>
         <br />
         <div class="col-12 row">
-            <input class="form-control col-12 masked" @bind="product.SalePrice" placeholder="مبلغ"  />
+            <input type="number" class="form-control col-12 masked" @bind="product.SalePrice" placeholder="مبلغ"  />
         </div>
         <br />
         <div class="col-12 row">
