--- a/GMSClient/Pages/Customers.razor
+++ b/GMSClient/Pages/Customers.razor
@@ -14,82 +14,88 @@
 }
 else
 {
-    <button class="btn-primary" @onclick="(()=>ShowCustomerAdd())">ایجاد مشتری</button>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>پرونده</th>
-                <th>نام</th>
-                <th>نام خانوادگی</th>
-                <th>تاریخ عضویت</th>
-                <th>جنسیت</th>
-                <th>موبایل</th>
-                <th>تلفن</th>
-                <th>کد پستی</th>
-                <th>ایمیل</th>
-                <th>تلگرام</th>
-                <th>اینستاگرام</th>
-                <th>آدرس</th>
-                <th>شغل</th>
-                <th>نحوه آشنایی</th>
-                <th>معرف</th>
-                <th>ویزیتور</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in customers)
-            {
-            <tr>
-                <td>
-                    <button class="btn-primary" @onclick="@(e => ShowCustomerProfile(item.ID))" >پروفایل ورزشی</button>
-                </td>
-                <td>
-                    @item.FirstName
-                </td>
-                <td>
-                    @item.LastName
-                </td>
-                <td>@item.JoinDateFa</td>
-                <td>
-                    @item.GenderFa
-                </td>
-                <td>
-                    @item.Mobile
-                </td>
-                <td>
-                    @item.Tel
-                </td>
-                <td>
-                    @item.PostalCode
-                </td>
-                <td>
-                    @item.Email
-                </td>
-                <td>
-                    @item.Telegram
-                </td>
-                <td>
-                    @item.Instagram
-                </td>
-                <td>
-                    @item.Address
-                </td>
-                <td>
-                    @item.JobTitle
-                </td>
-                <td>
-                    @item.MembershipJoinTypeTitle
-                </td>
-                <td>
-                    @item.ReferralFullName
-                </td>
-                <td>
-                    @item.VisitorFullName
-                </td>
-            </tr>
-            }
-        </tbody>
-    </table>
+    <button type="button" class="btn btn-primary py-2 my-2" @onclick="(()=>ShowCustomerAdd())">ایجاد مشتری</button>
+
+    <div class="table-responsive">
+        <table class="table table-hover" style="table-layout: auto; width: 100%; ">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">نام</th>
+                    <th scope="col">نام خانوادگی</th>
+                    <th scope="col">تاریخ عضویت</th>
+                    <th scope="col">جنسیت</th>
+                    <th scope="col">موبایل</th>
+                    <th scope="col">تلفن</th>
+                    <th scope="col">کد پستی</th>
+                    <th scope="col">ایمیل</th>
+                    <th scope="col">تلگرام</th>
+                    <th scope="col">اینستاگرام</th>
+                    <th scope="col">آدرس</th>
+                    <th scope="col">شغل</th>
+                    <th scope="col">نحوه آشنایی</th>
+                    <th scope="col">معرف</th>
+                    <th scope="col">ویزیتور</th>
+                    <th scope="col">پرونده</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in customers)
+                {
+                    <tr>
+                        <td>
+                            @item.FirstName
+                        </td>
+                        <td>
+                            @item.LastName
+                        </td>
+                        <td>@item.JoinDateFa</td>
+                        <td>
+                            @item.GenderFa
+                        </td>
+                        <td>
+                            @item.Mobile
+                        </td>
+                        <td>
+                            @item.Tel
+                        </td>
+                        <td>
+                            @item.PostalCode
+                        </td>
+                        <td>
+                            @item.Email
+                        </td>
+                        <td>
+                            @item.Telegram
+                        </td>
+                        <td>
+                            @item.Instagram
+                        </td>
+                        <td>
+                            @item.Address
+                        </td>
+                        <td>
+                            @item.JobTitle
+                        </td>
+                        <td>
+                            @item.MembershipJoinTypeTitle
+                        </td>
+                        <td>
+                            @item.ReferralFullName
+                        </td>
+                        <td>
+                            @item.VisitorFullName
+                        </td>
+                        <td>
+                            <button class="btn btn-dark py-1 my-1" @onclick="@(e => ShowCustomerProfile(item.ID))">پروفایل ورزشی</button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+
+
 }
 
 @code {
@@ -98,7 +104,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        if(string.IsNullOrWhiteSpace(stateContainer.Token))
+        if (string.IsNullOrWhiteSpace(stateContainer.Token))
         {
             navigationManager.NavigateTo("/");
         }
@@ -122,6 +128,5 @@ else
     {
         navigationManager.NavigateTo("/customerprofile/" + id.ToString());
     }
-
 
 }
