--- a/GMSClient/Pages/CustomerAdd.razor
+++ b/GMSClient/Pages/CustomerAdd.razor
@@ -10,53 +10,48 @@
     <EditForm Model="@customer" OnValidSubmit="CreateCustomer">
         <DataAnnotationsValidator />
         <ValidationSummary />
-        <div>
-            <br />
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <input class="form-control" @bind="customer.FirstName" placeholder="نام" />
+
+
+            </div>
+            <div class="col-md-4 mb-3">
+                <input class="form-control" @bind="customer.LastName" placeholder="نام خانوادگی" />
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="input-group">
+                    <input class="form-control masked" @bind="customer.BirthDateFa" placeholder="تاریخ تولد مثلا 1365/06/25" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1365/05/30" />
+                </div>
+            </div>
         </div>
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.FirstName" placeholder="نام" />
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <input class="form-control" @bind="customer.Email" placeholder="ایمیل" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <input type="number" class="form-control" @bind="customer.Mobile" placeholder="موبایل" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <input class="form-control" @bind="customer.Tel" placeholder="تلفن" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <input class="form-control" @bind="customer.Instagram" placeholder="اینستاگرام" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <input class="form-control" @bind="customer.Telegram" placeholder="تلگرام" />
+            </div>
         </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.LastName" placeholder="نام خانوادگی" />
+
+        <div class="form-row">
+            <div class="col-md-10 mb-3">
+                <input class="form-control" @bind="customer.Address" placeholder="آدرس" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <input class="form-control" @bind="customer.PostalCode" placeholder="کد پستی" />
+            </div>
         </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12 masked" @bind="customer.BirthDateFa" placeholder="تاریخ تولد مثلا 1365/06/25" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1365/05/30" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input type="number" class="form-control col-12" @bind="customer.Mobile" placeholder="موبایل" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.Address" placeholder="آدرس" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.Email" placeholder="ایمیل" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.Tel" placeholder="تلفن" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.PostalCode" placeholder="کد پستی" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.Instagram" placeholder="اینستاگرام" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="customer.Telegram" placeholder="تلگرام" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input type="checkbox" class="form-control col-12" @bind="customer.Gender" value="مرد؟" />
-        </div>
-        <br />
+
         <div class="form-group row">
             <div class="col-sm-10">
                 <InputSelect @bind-Value="customer.JobTitle" class="form-control">
@@ -70,7 +65,7 @@
                 شغل
             </label>
         </div>
-        <br />
+       
         <div class="form-group row">
             <div class="col-sm-10">
                 <InputSelect @bind-Value="customer.MembershipJoinTypeTitle" class="form-control">
@@ -84,13 +79,12 @@
                 نحوه آشنایی
             </label>
         </div>
+
         
-        <br />
-        <div class="col-12 row">
-            <input type="submit" class="form-control col-12 btn btn-primary" value="ثبت" />
-        </div>
-        <div class="col-12 row">
-            <button type="button" class="form-control col-12 btn btn-primary" value="انصراف" @onclick="Cancel">انصراف</button>
+        <div class="input-group">
+            <div class="mr-1"><button type="submit" class=" btn btn-success" value="ثبت">ثبت اطلاعات</button></div>
+
+            <button type="button" class=" btn btn-danger mr-2 px-1" value="انصراف" @onclick="Cancel">انصراف</button>
         </div>
         <br />
         <div class="col-12 row" style="text-align:left; font-weight:bold">
