--- a/GMSClient/Pages/ProductAdd.razor
+++ b/GMSClient/Pages/ProductAdd.razor
@@ -12,36 +12,42 @@
         <div>
             <br />
         </div>
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="product.ProductCode" placeholder="کد محصول" />
+        <div class="form-row">
+            <div class="col-md-5 mb-3">
+                <input class="form-control col-12" @bind="product.ProductCode" placeholder="کد محصول" />
+
+
+            </div>
+            <div class="col-md-5 mb-3">
+                <input class="form-control col-12" @bind="product.ProductName" placeholder="نام محصول" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <div class="input-group">
+                    <input type="number" class="form-control col-12 masked" @bind="product.SalePrice" placeholder="مبلغ" />
+                </div>
+            </div>
         </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="product.ProductName" placeholder="نام محصول" />
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <input class="form-control col-12" @bind="product.StartDateFa" placeholder="تاریخ شروع مثلا 1399/09/01" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1399/09/01" />
+            </div>
+            <div class="col-md-4 mb-3">
+                <input class="form-control col-12" @bind="product.EndDateFa" placeholder="تاریخ پایان مثلا 1399/12/01" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1399/12/01" />
+            </div>
+            <div class="col-md-2 mb-3">
+                <div class="input-group">
+                    <input type="number" class="form-control col-12" @bind="product.SessionCount" placeholder="تعداد جلسات" />
+                </div>
+            </div>
         </div>
-        <br />
-        <div class="col-12 row">
-            <input type="number" class="form-control col-12 masked" @bind="product.SalePrice" placeholder="مبلغ"  />
+
+        <div class="input-group">
+            <div class="mr-2"><button type="submit" class=" btn btn-success" value="ثبت">ثبت اطلاعات</button></div>
+
+            <button type="button" class=" btn btn-danger mr-2 px-1" value="انصراف" @onclick="Cancel">انصراف</button>
         </div>
-        <br />
-        <div class="col-12 row">
-            <input type="number" class="form-control col-12" @bind="product.SessionCount" placeholder="تعداد جلسات" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="product.StartDateFa" placeholder="تاریخ شروع مثلا 1399/09/01" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1399/09/01" />
-        </div>
-        <br />
-        <div class="col-12 row">
-            <input class="form-control col-12" @bind="product.EndDateFa" placeholder="تاریخ پایان مثلا 1399/12/01" pattern="[0-9]{4}/(0[1-9]|1[012])/(0[1-9]|1[0-9]|2[0-9]|3[01])" data-valid-example="1399/12/01" />
-        </div>
-        <br />        
-        <div class="col-12 row">
-            <input type="submit" class="form-control col-12 btn btn-primary" value="ثبت" />
-        </div>
-        <div class="col-12 row">
-            <button type="button" class="form-control col-12 btn btn-primary" value="انصراف" @onclick="Cancel">انصراف</button>
-        </div>
+
+
         <br />
         <div class="col-12 row" style="text-align:left; font-weight:bold">
             <span class="col-12">@BackendMesssage</span>
