--- a/GMSClient/Pages/Login.razor
+++ b/GMSClient/Pages/Login.razor
@@ -2,8 +2,6 @@
 @layout LoginLayout
 @inject NavigationManager navigationManager
 @inject StateContainer stateContainer
-
-
     
     <link rel="icon" type="image/png" href="./images/icons/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./vendor/bootstrap/css/bootstrap.min.css">
@@ -16,40 +14,47 @@
     <link rel="stylesheet" type="text/css" href="./vendor/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" type="text/css" href="./css/util.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-
+<style>
+    .container-login100::before {
+        background-color: rgba(0,0,0,0.6) !important;
+    }
+    .container-login100 {
+        justify-content : normal !important
+    }
+</style>
 
 <div class="limiter">
-    <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
-        <div class="wrap-login100">
+    <div class="container-login100" style="background-image: url('images/BodyB1.jpg');" >
+        <div class="wrap-login100 offset-md-2" style="width:450px !important">
             <EditForm class="login100-form validate-form" Model="@user" OnValidSubmit="@ValidateUser">
                 <span class="login100-form-logo">
                     <i class="zmdi zmdi-landscape"></i>
                 </span>
 
                 <span class="login100-form-title p-b-34 p-t-27">
-                    ورود به برنامه
+                   ورود به برنامه
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Enter username">
-                    <input class="input100" type="text" @bind="user.UserName" name="username" placeholder="Username">
+                    <input class="input100" type="text" @bind="user.UserName" name="username" placeholder="نام کابری">
                     <span class="focus-input100" data-placeholder="&#xf207;"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Enter password">
-                    <input class="input100" type="password" @bind="user.Password" name="pass" placeholder="Password">
+                    <input class="input100" type="password" @bind="user.Password" name="pass" placeholder="رمز ورود">
                     <span class="focus-input100" data-placeholder="&#xf191;"></span>
                 </div>
 
                 <div class="contact100-form-checkbox">
                     <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
                     <label class="label-checkbox100" for="ckb1">
-                        Remember me
+                        مرا به خاطر بسپار
                     </label>
                 </div>
 
                 <div class="container-login100-form-btn">
                     <input type="submit" class="login100-form-btn"
-                           value="ورود به سیستم" />
+                           value="ورود به سیستم" style="font-size : 10px" />
 
                 </div>
                 <div class="col-12 row" style="text-align:center;color:orangered; font-weight:bold">
@@ -58,7 +63,7 @@
 
                 <div class="text-center p-t-90">
                     <a class="txt1" href="#">
-                        Forgot Password?
+                       رمز عبور را فراموش کرده ام 
                     </a>
                 </div>
             </EditForm>
@@ -68,40 +73,6 @@
 
 
 <div id="dropDownSelect1"></div>
-
-
-
-   @*@section script {}*@
-
-@*<center>
-        <EditForm Model="@user" OnValidSubmit="@ValidateUser">
-            <div>
-                <br /><br /><br /><br /><br />
-            </div>
-            <div>
-                <h3 style="font-weight:bold; color:purple">سامانه مدیریت باشگاه های ورزشی</h3>
-            </div>
-            <div>
-                <br />
-            </div>
-            <div class="col-12 row">
-                <input class="form-control col-12" @bind="user.UserName" placeholder="نام کاربری" />
-            </div>
-            <br />
-            <div class="col-12 row">
-                <input type="password" class="form-control col-12" @bind="user.Password" placeholder="رمز عبور" />
-            </div>
-            <br />
-            <div class="col-12 row">
-                <input type="submit" class="form-control col-12 btn btn-primary" value="ورود به سیستم" />
-            </div>
-            <br />
-            <div class="col-12 row" style="text-align:left; font-weight:bold">
-                <span class="col-12">@LoginMesssage</span>
-            </div>
-        </EditForm>
-    </center>*@
-@* fdfkdlfkdlfdkfldf *@
 
 @code {
 
