--- a/GMSClient/Shared/NavMenu.razor
+++ b/GMSClient/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> محصولات
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="shiftpatterns">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> الگوی زمانی جلسات
+            </NavLink>
+        </li>        
     </ul>
 </div>
 
