--- a/GMSClient/Pages/ShiftPatterns.razor
+++ b/GMSClient/Pages/ShiftPatterns.razor
@@ -5,7 +5,66 @@
 @inject StateContainer stateContainer
 
 <h1>الگوی زمانی جلسات</h1>
+@if (shiftPatternHeaders == null)
+{
+<p><em>Loading...</em></p>
+                <span class="col-12">@BackendMesssage</span> }
+            else
+            {
+<button type="button" class="btn btn-primary py-2 my-2" @onclick="(()=>ShowCustomerAdd())">ایجاد مشتری</button>
 
-@code {
+                <div class="table-responsive">
+                    <table class="table table-hover" style="table-layout: auto; width: 100%; ">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">عنوان</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in shiftPatternHeaders)
+                            {
+            <tr>
+                <td>
+                    @item.Title
+                </td>
+                <td>
+                    <button class="btn btn-dark py-1 my-1" @onclick="@(e => ShowCustomerProfile(item.ID))">پروفایل ورزشی</button>
+                </td>
+            </tr>}
+                        </tbody>
+                    </table>
+                </div>}
 
+
+
+@code { private ShiftPatternHeader[] shiftPatternHeaders;
+    private string BackendMesssage;
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (string.IsNullOrWhiteSpace(stateContainer.Token))
+        {
+            navigationManager.NavigateTo("/");
+        }
+
+        var data = BackendEngine.Call("ShiftPatternHeaderGetAll", "{}", stateContainer.Token);
+
+
+        var msg = data.GetBackendErrorMsg();
+        if (msg.Length > 0)
+            BackendMesssage = msg;
+        else
+            shiftPatternHeaders = JsonConvert.DeserializeObject<ShiftPatternHeader[]>(data);
+
+    }
+
+    private async void ShowCustomerAdd()
+    {
+        navigationManager.NavigateTo("/customeradd");
+    }
+
+    private async void ShowCustomerProfile(long id)
+    {
+        navigationManager.NavigateTo("/customerprofile/" + id.ToString());
+    } 
 }
