--- a/GMSClient/Pages/_Host.cshtml
+++ b/GMSClient/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 </head>
 <body>
     <app>
@@ -41,7 +42,7 @@
     <script src="./css/vendor/daterangepicker/daterangepicker.js"></script>
     <script src="./css/vendor/countdowntime/countdowntime.js"></script>
     <script src="./js/main.js"></script>
-
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
 </body>
 </html>
