--- a/GMSClient/Shared/NavMenu.razor
+++ b/GMSClient/Shared/NavMenu.razor
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="shiftpatterns">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> الگوی زمانی جلسات
+                <span class="oi oi-list-rich" aria-hidden="true"></span> تنظیم الگوی شیفتها
             </NavLink>
         </li>        
     </ul>
