--- a/GMSClient/Shared/NavMenu.razor
+++ b/GMSClient/Shared/NavMenu.razor
@@ -31,7 +31,12 @@
             <NavLink class="nav-link" href="shiftpatterns">
                 <span class="oi oi-timer" aria-hidden="true"></span> تنظیم الگوی شیفتها
             </NavLink>
-        </li>        
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="calendarmanage">
+                <span class="oi oi-calendar" aria-hidden="true"></span> تنظیم تقویم کاری
+            </NavLink>
+        </li>
     </ul>
 </div>
 
